frontend extracted as separate service, scrapper service improved with connection retries with unit test , chart js recievied refactor , with time scale tick rate select responsive select menu